refactor: Update Werewolf Game to Web Interation (#202)